dataset1235/2025-2/2868285114/users/2502343884/executions/3071719669_2559670275.log
== RUN (2025-08-28 22:42:38)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:40:53)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti* 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:25)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:08)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3:))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:23)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:40:55)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti* 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti* 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:37:27)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = quanti * 7
        ^^^^^^
NameError: name 'quanti' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:10)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3:))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:43:40)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = q * 7
total = p - c 
print(round(total , 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
---- user output:
2508.1
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
---- user output:
1601.55
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
---- user output:
1859.563
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
---- user output:
3066.88
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
---- user output:
1572.38
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
---- user output:
859.563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:37:02)
-- CODE: 
p = float(input(""))
q = float(input(""))
c = quanti * 7
total = p - c 
print(round(total , 3:))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2660.00
21.7
---- correct output:
2508.1
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1700.60
14.15
---- correct output:
1601.55
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2000.3333
20.11
---- correct output:
1859.563
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
3250.00
26.16
---- correct output:
3066.88
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1850.70
39.76
---- correct output:
1572.38
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.563
-- ERROR:
File "XXXX", line 5
    print(round(total , 3:))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
